<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_power_settings_new_24"
            android:title="@string/menu_logout" />
    </group>
</menu>