<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clOverview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:id="@+id/tvAddTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:labelFor="@+id/etAddTitle"
            android:text="@string/title_label" />

        <EditText
            android:id="@+id/etAddTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvAddExpiryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/expiry_label" />

        <CalendarView
            android:id="@+id/cvAddExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvAddTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/time_label"
            android:labelFor="@+id/etAddTime" />

        <EditText
            android:id="@+id/etAddTime"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/default_time"/>

        <TextView
            android:id="@+id/tvAddDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/etAddDescription"
            android:text="@string/description_label" />

        <EditText
            android:id="@+id/etAddDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="text|textMultiLine" />

        <Switch
            android:id="@+id/sAddFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/favourite_label"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/bAddTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_button"
            android:background="@color/primary"
            android:textColor="@color/cardview_light_background"/>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>